--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.FirstApplication"
         tools:targetApi="31">
 
-        <activity android:name=".view.DemoActivity" android:exported="true">
+        <activity android:name=".view.FragmentsActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -26,6 +26,7 @@
         </activity>
 
         <activity android:name=".view.Demo2Activity" android:exported="false"></activity>
+        <activity android:name=".view.DemoActivity"/>
 
     </application>
 
